# m2e-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxygen  LICENSE  LICENSE.txt  README.md  README.rst  public_key.pem  setup.sh  vcpkg.json
cmake/: target.cmake
configs/: http-gate-docker.json  m2e-bridge-docker.json  m2e-bridge.json  pipelines-docker.json  pipelines.json
docs/: Makefile  build.sh  pyproject.toml
docs/source/: _connectors.rst  _filtras.rst  conf.py  index.rst  pipelines.rst
docs/source/_static/: custom.css  openapi.json
protos/: agent_api_modbus.proto  channel_modbus_api.proto
sample_pipelines/: clearblade_compatible.json  http_connectors.json  sample_pipeline.json  two_gcp_connectors.json  two_mqtt_connectors.json  two_pubsub_connectors.json
src/: API_VERSION.h  VERSION.h  aliases.h  api_helpers.cpp  api_helpers.h  aws_sdk_manager.h  civet_helpers.h  condition.h  database.cpp  database.h  filtra.h  global.cpp  global_config.h  global_state.h  internal_queue.cpp  internal_queue.h  internal_queues.cpp  internal_queues.h  jwt_helpers.cpp  jwt_helpers.h  m2e_aliases.h  m2e_exceptions.h  main.cpp  mapper.cpp  mapper.h  pipeline.cpp  pipeline.h  pipeline.json  pipeline.yaml  pipeline_iface.h  pipeline_supervisor.cpp  pipeline_supervisor.h  pipeline_test.json  rest_api.cpp  rest_api.h  rest_api_helpers.cpp  rest_api_helpers.h  route.h  router.h  schema.h  (+9 more)
src/connectors/: _connector_template.h  all.h  aws_s3_connector.h  aws_sdk_manager.h  azure_service_bus_connector.h  connector.h  connector_template.h  email_connector.h  gcp_bucket_connector.h  gcp_cloud_storage_connector.h  gcp_pubsub_connector.h  generator_connector.h  http_connector.h  internal_connector.h  mqtt_connector.h  postgresql_connector.h  slack_conector.h  slack_connector.h  sqlite_connector.h
src/connectors/modbus/: modbus_connector.cpp  modbus_connector.h
src/database/: authbundle.cpp  authbundle.h  converter.h
src/factories/: connector_factory.h  filter_factory.h  filtra_factory.h  transformer_factory.h
src/filters/: comparator_filter.h  filter.h  finder_filter.h  search_filter.h
src/filtras/: all.h  builder.h  comparator.h  converter.h  converter_lua.h  eraser.h  extractor.h  filtra.h  finder.h  image.h  limiter.h  nop.h  splitter.h  throttle.h
src/gates/: http_gate.cpp  http_gate.h
src/listeners/: http_listener.cpp  http_listener.h
src/m2e_message/: message.h  message_extra.h  message_wrapper.h  meta_message.h
src/modifiers/: modifier.h  modifier_internal.h  resize.h
src/substitutions/: subs.cpp  subs.hpp
src/transformers/: eraser_transformer.h  transformer.h
src/utils/: threadsafe_queue.h
tests/: CMakeLists.txt  test.cpp
tests/configs/: http_listener.json  m2e-bridge.json  pipelines.json  shared_objects.json
tests/connectors/: mock_database.cpp  mock_database.h  test_email.cpp  test_email.h
tests/factories/: test_connector.cpp  test_connector.h  test_filtra.h
tests/filtras/: mock_pipeline.h  test_builder.cpp  test_builder.h  test_comparator.h  test_eraser.cpp  test_eraser.h  test_finder.cpp  test_finder.h  test_limiter.cpp  test_limiter.h  test_nop.h  test_splitter.cpp  test_splitter.h  test_throttle.cpp  test_throttle.h
tools/: export_specs.py
